[gd_scene load_steps=16 format=3 uid="uid://7wj7fk01d4s3"]

[ext_resource type="Script" uid="uid://c7dph2rgpfeii" path="res://Codigo/Enemigos/Bombardero.gd" id="1_8d1da"]
[ext_resource type="PackedScene" uid="uid://iqb7u2n6l32s" path="res://escenas/Otras cosas/Barra_vida.tscn" id="1_jwk4o"]
[ext_resource type="Texture2D" uid="uid://cyyiewywcvsb7" path="res://assets/Enemigos/Bombardero.png" id="2_rkw6w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_huxo0"]
atlas = ExtResource("2_rkw6w")
region = Rect2(0, 768, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmpw2"]
atlas = ExtResource("2_rkw6w")
region = Rect2(144, 0, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilvcr"]
atlas = ExtResource("2_rkw6w")
region = Rect2(0, 0, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_17g2r"]
atlas = ExtResource("2_rkw6w")
region = Rect2(144, 0, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mg56"]
atlas = ExtResource("2_rkw6w")
region = Rect2(280, 0, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr43b"]
atlas = ExtResource("2_rkw6w")
region = Rect2(416, 0, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7k2a"]
atlas = ExtResource("2_rkw6w")
region = Rect2(553, 0, 150, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_xasfw"]
atlas = ExtResource("2_rkw6w")
region = Rect2(703, 0, 150, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t7ns"]
atlas = ExtResource("2_rkw6w")
region = Rect2(176, 496, 160, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x2wc"]
atlas = ExtResource("2_rkw6w")
region = Rect2(0, 0, 155, 248)

[sub_resource type="SpriteFrames" id="SpriteFrames_p3vup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_huxo0")
}],
"loop": false,
"name": &"Atacando",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmpw2")
}],
"loop": true,
"name": &"Callendo",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilvcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17g2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mg56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr43b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7k2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xasfw")
}],
"loop": true,
"name": &"Corriendo",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t7ns")
}],
"loop": false,
"name": &"Muerte",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x2wc")
}],
"loop": true,
"name": &"Parado",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkw6w"]
size = Vector2(20, 37)

[node name="Bombardero" type="CharacterBody2D" groups=["enemigos"]]
collision_layer = 4
script = ExtResource("1_8d1da")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0.49999943, 0.5)
scale = Vector2(0.13125, 0.14919354)
sprite_frames = SubResource("SpriteFrames_p3vup")
animation = &"Atacando"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_rkw6w")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="BarraVida" parent="." instance=ExtResource("1_jwk4o")]
offset_left = -15.0
offset_top = -26.0
offset_right = 15.0
offset_bottom = -25.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5

[node name="Izquierda" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(-214, 0)
collision_mask = 2

[node name="Derecha" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(214, 0)
collision_mask = 2

[node name="Ataque" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Ataque" to="." method="_on_ataque_timeout"]
